salesforce/DeviceManager/force-app/main/default/objects/Device__c/Device__c.object-meta.xml
<CustomObject>
    <label>Device</label>
    <nameField>
        <label>Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>