salesforce/DeviceManager/force-app/main/default/objects/Device__c/fields/ExternalDeviceManagerAppId__c.field-meta.xml
<CustomField>
    <fullName>ExternalDeviceManagerAppId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExternalDeviceManagerAppId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>