salesforce/DeviceManager/force-app/main/default/objects/Device__c/fields/LastlyModifiedByDMJavaApp__c.field-meta.xml
<CustomField>
    <fullName>LastlyModifiedByDMJavaApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lastly Modified By DM Java App</label>
    <type>Checkbox</type>
</CustomField>