salesforce/DeviceManager/force-app/main/default/objects/Device__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>