salesforce/DeviceManager/force-app/main/default/objects/Device__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Manufacturer__c</columns>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>ExternalDeviceManagerAppId__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>